--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>TypeScript Greeter</title>
+</head>
+<body>
+    <script src="greeter.js"></script>
+</body>
+</html>
